package in.itkaran.lld1200624.lld2.observer;

public interface Subscriber {
    void update();
}
